test/tests/stages/14_pointers/valid/function_calls/address_of_argument.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: addr_of_arg
        List[1]: 
          TIdentifier: a
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: a
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDereference: 
                    CVar: 
                      TIdentifier: ptr
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: a
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[7]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: result
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: addr_of_arg
                      List[1]: 
                        CUnary: 
                          CNegate: 
                          CConstant: 
                            CConstInt: 
                              TInt: 20
                            None: 
                          None: 
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: result
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: var
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 100
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: result
                    None: 
                  CFunctionCall: 
                    TIdentifier: addr_of_arg
                    List[1]: 
                      CVar: 
                        TIdentifier: var
                        None: 
                    None: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: result
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: var
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 100
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
